# Particle-in-Cell_-PiC-

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  start_sbatch.py
GTestLib/: CMakeLists.txt
algorithms/: CMakeLists.txt
algorithms/headers/: FDTD.hpp  Field.hpp
algorithms/sources/: FDTD.cpp  Field.cpp
include/: CMakeLists.txt
include/core/: FieldFileManager.hpp  Grid.hpp  types.hpp
include/parallel/: FDTD_MPI.hpp  FDTD_mpi.cpp  MPI_Wrapper.hpp
include/сore/: FieldFileManager.hpp  Grid.hpp  types.hpp
input_for_graphs/: analytical_data.csv  convergence.csv  convergence.py  get_time.py  main.py  my_data.csv
sample/: CMakeLists.txt  sample.cpp
tests/: CMakeLists.txt
tests/headers/: tests.hpp
tests/sources/: test_main.cpp  tests.cpp
